feature: add method transcription voice
